# code-moniker

./: .code-moniker.toml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-POSTGRESQL  README.md  SPEC.md  build.rs  pg_code_moniker.control
crates/check/: Cargo.toml
crates/check/src/: lib.rs
crates/check/src/check/: code-moniker.fragment.toml  command.rs  exclude.rs  mod.rs  path.rs  workspace.rs
crates/check/src/scenario/: expect.rs  mod.rs  parse.rs  run.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/assets/learn/: aggregates.cm.md  collections.cm.md  directives.cm.md  metrics.cm.md  paths.cm.md  refs.cm.md
crates/cli/src/: args.rs  cache.rs  check.rs  check_scenario.rs  code-moniker.fragment.toml  color.rs  dir.rs  extract.rs  format.rs  glob.rs  harness.rs  inspect.rs  lang.rs  language_kinds.rs  lib.rs  live_control.rs  logger.rs  main.rs  manifest.rs  mcp_command.rs  moniker_render.rs  page.rs  perf.rs  predicate.rs  rules.rs  session.rs  sources.rs  stats.rs  tsconfig.rs  ui.rs  ui_command.rs  walk.rs  workspace_index.rs
crates/cli/src/check/: code-moniker.fragment.toml  command.rs  config.rs  eval.rs  exclude.rs  expr.rs  mod.rs  path.rs  suppress.rs  workspace.rs
crates/cli/src/daemon/: mod.rs
crates/cli/src/diff/: mod.rs  render_json.rs  render_text.rs  scan.rs
crates/cli/src/extract/: directory.rs  filter.rs  format.rs  mod.rs
crates/cli/src/format/: tree.rs
crates/cli/src/harness/: mod.rs
crates/cli/src/langs/: mod.rs
crates/cli/src/manifest/: mod.rs
crates/cli/src/mcp/: code-moniker.fragment.toml  context.rs  dispatch.rs  lmnav.rs  mod.rs  server.rs  tests.rs  transport.rs
crates/cli/src/notes/: mod.rs  model.rs  resolve.rs  store.rs
crates/cli/src/query/: mod.rs
crates/cli/src/rules/: mod.rs
crates/cli/src/shapes/: mod.rs
crates/cli/src/stats/: mod.rs
crates/cli/src/tree/: files.rs  mod.rs  outline.rs  strategy.rs  style.rs
crates/cli/src/ui/: acceptance.rs  async_task.rs  change.rs  clipboard.rs  code-moniker.fragment.toml  component.rs  events.rs  filter.rs  kinds.rs  live.rs  mod.rs  nav_notes.rs  navigator.rs  panel.rs  perf.rs  reactive.rs  route.rs  scroll.rs  source.rs  store.rs  tests.rs  text.rs  theme.rs  view.rs  workspace_read.rs  workspace_state.rs
crates/cli/src/views/: code-moniker.fragment.toml  config.rs  mod.rs  model.rs  render.rs  resolve.rs
crates/cli/src/workspace/: bridge.rs  code-moniker.fragment.toml  facade.rs  git.rs  index.rs  linkage.rs  mod.rs  model.rs  snapshot.rs  store.rs  symbols.rs  target_tests.rs
crates/cli/tests/: binary_functional.rs  cli_e2e.rs  cli_functional.rs  commands_in_process.rs  diff_e2e.rs  samples_contract.rs
crates/core/: Cargo.toml
crates/core/examples/: bench_codegraph.rs  bench_extract.rs  bench_phases.rs  bench_rust_sdk_compare.rs
crates/core/src/: code-moniker.fragment.toml  lib.rs
crates/core/src/core/: code_graph.rs  kinds.rs  logger.rs  mod.rs  shape.rs
crates/core/src/declare/: build.rs  parse.rs
crates/core/src/lang/: build_manifest.rs  callable.rs  canonical_walker.rs  extractor.rs  kinds.rs  mod.rs  strategy.rs  tree_util.rs
crates/core/tests/: extractor_conformance.rs  extractor_expectations.rs  extractor_snapshots.rs  extractors_conformance.rs  extractors_contract.rs  extractors_snapshots.rs
crates/core/tests/snapshots/: extractor_snapshots__snapshot_cs.snap  extractor_snapshots__snapshot_cs@UserService.cs.snap  extractor_snapshots__snapshot_go.snap  extractor_snapshots__snapshot_go@http_handlers.go.snap  extractor_snapshots__snapshot_go@metrics.go.snap  extractor_snapshots__snapshot_java.snap  extractor_snapshots__snapshot_java@OrderWorkflow.java.snap  extractor_snapshots__snapshot_java@UserService.java.snap  extractor_snapshots__snapshot_python.snap  extractor_snapshots__snapshot_python@accounts.py.snap  extractor_snapshots__snapshot_python@jobs.py.snap  extractor_snapshots__snapshot_python@payments.py.snap  extractor_snapshots__snapshot_rs.snap  extractor_snapshots__snapshot_rs@accounts.rs.snap  extractor_snapshots__snapshot_rs@async_jobs.rs.snap  extractor_snapshots__snapshot_rs@rust_refs.rs.snap  extractor_snapshots__snapshot_rs@rust_tests.rs.snap  extractor_snapshots__snapshot_sql.snap  extractor_snapshots__snapshot_sql@users.sql.snap  extractor_snapshots__snapshot_ts.snap  extractor_snapshots__snapshot_ts@accounts.ts.snap  extractor_snapshots__snapshot_ts@closures.ts.snap  extractor_snapshots__snapshot_ts@imports.ts.snap  extractor_snapshots__snapshot_ts@inventory.ts.snap  extractor_snapshots__snapshot_ts@jsx.tsx.snap  extractor_snapshots__snapshot_ts@jsx_legacy.jsx.snap  extractors_snapshots__snapshot_cs@OrderWorkflow.cs.snap  extractors_snapshots__snapshot_go@accounts.go.snap  extractors_snapshots__snapshot_go@http_handlers.go.snap  extractors_snapshots__snapshot_go@metrics.go.snap  extractors_snapshots__snapshot_java@OrderWorkflow.java.snap  extractors_snapshots__snapshot_java@UserService.java.snap  extractors_snapshots__snapshot_python@accounts.py.snap  extractors_snapshots__snapshot_python@jobs.py.snap  (+14 more)
crates/daemon/: Cargo.toml
crates/daemon-client/: Cargo.toml
crates/daemon-client/src/: lib.rs
crates/daemon/src/: lib.rs
crates/pg/: Cargo.toml  code_moniker.control
crates/pg/src/: build.rs  declare.rs  extract.rs  lib.rs  registry.rs
crates/query/: Cargo.toml
crates/query/src/: discovery.rs  lib.rs
crates/workspace/: Cargo.toml
crates/workspace/benches/: indexing.rs  queries.rs
crates/workspace/examples/: bench_linkage.rs  bench_memory.rs  linkage_census.rs
crates/workspace/src/: audit.rs  cache.rs  code-moniker.fragment.toml  environment.rs  extract.rs  facade.rs  gitignore.rs  glob.rs  lib.rs  lines.rs  live.rs  path_util.rs  sources.rs  tsconfig.rs  walk.rs
crates/workspace/tests/: incremental_equivalence.proptest-regressions  incremental_equivalence.rs  linkage_acceptance.rs  rust_sdk_acceptance.rs  rust_sdk_convergence.rs  view_contracts.rs  workspace_linkage_acceptance.rs  workspace_registry_acceptance.rs
(+1293 files in other folders)
