[package]
name        = "pg_code_moniker"
version     = "0.1.0"
edition     = "2024"
publish     = false
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ng-galien/pg_code_moniker"
description = "Native types and indexed algebra for code symbol identity (moniker) and code graph storage (code_graph)"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name              = "pg-moniker"
path              = "src/bin/pg_moniker.rs"
required-features = ["cli"]

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
# default = []  -- core/ compiles and tests without pgrx, no PG required.
# pgN       -- pulls pgrx in for the SQL surface and the chosen PG major.
#              Use one at a time: `cargo build --features pg17`.
# pg_test   -- enables in-PG integration tests via pgrx-tests (added later).
# -----------------------------------------------------------------------------
[features]
default = ["cli"]
serde   = ["dep:serde"]
cli     = ["dep:clap", "dep:anyhow", "dep:thiserror", "dep:regex", "serde"]
pg14    = ["dep:pgrx", "pgrx/pg14", "serde"]
pg15    = ["dep:pgrx", "pgrx/pg15", "serde"]
pg16    = ["dep:pgrx", "pgrx/pg16", "serde"]
pg17    = ["dep:pgrx", "pgrx/pg17", "serde"]
pg_test = []

[dependencies]
pgrx      = { version = "0.18", optional = true }
serde     = { version = "1", features = ["derive"], optional = true }
clap      = { version = "4", features = ["derive"], optional = true }
anyhow    = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
regex     = { version = "1", optional = true }

# Tree-sitter and per-language grammars for the lang/ extractors.
tree-sitter            = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-rust       = "0.24"
tree-sitter-java       = "0.23"
tree-sitter-python     = "0.25"
tree-sitter-go         = "0.23"
tree-sitter-c-sharp    = "0.23"

# Manifest parsers for the build/* primitives.
toml       = "0.8"
serde_json = "1"
roxmltree  = "0.20"

# pgrx-tests added later when in-PG tests (`#[pg_test]`) are introduced.
# It requires a `pgN` feature and breaks pure-Rust `cargo test` when always-on.

[build-dependencies]
cc = "1"

[dev-dependencies]
serde_cbor = "0.11"
proptest = { version = "1", default-features = false, features = ["std"] }
tempfile = "3"

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------
[profile.dev]
panic = "unwind"

[profile.release]
panic        = "unwind"
opt-level    = 3
lto          = "fat"
codegen-units = 1
