[workspace]
resolver = "2"
members = [
	"crates/core",
	"crates/cli",
	"crates/pg",
]

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.85"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/ng-galien/code-moniker"
homepage      = "https://github.com/ng-galien/code-moniker"

[workspace.dependencies]
code-moniker-core = { path = "crates/core", version = "0.1.0" }

pgrx      = { version = "0.18" }
serde     = { version = "1", features = ["derive"] }
clap      = { version = "4", features = ["derive", "env"] }
anyhow    = "1"
thiserror = "2"
regex     = "1"
ignore    = "0.4"
rayon     = "1"

rustc-hash             = "2"
tree-sitter            = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-rust       = "0.24"
tree-sitter-java       = "0.23"
tree-sitter-python     = "0.25"
tree-sitter-go         = "0.23"
tree-sitter-c-sharp    = "0.23"
tree-sitter-postgres   = "1.1"

toml       = "0.8"
serde_json = "1"
roxmltree  = "0.20"

serde_cbor = "0.11"
proptest   = { version = "1", default-features = false, features = ["std"] }
tempfile   = "3"

anstyle       = "1"

[profile.dev]
panic = "unwind"

[profile.release]
panic        = "unwind"
opt-level    = 3
lto          = "fat"
codegen-units = 1
