[workspace]
resolver = "2"
members = [
	"crates/core",
	"crates/workspace",
	"crates/cli",
	"crates/pg",
]

[workspace.package]
version       = "0.3.0"
edition       = "2024"
rust-version  = "1.86"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/ng-galien/code-moniker"
homepage      = "https://github.com/ng-galien/code-moniker"

[workspace.dependencies]
code-moniker-core = { path = "crates/core", version = "0.3.0" }
code-moniker-workspace = { path = "crates/workspace", version = "0.3.0" }

pgrx      = { version = "0.18" }
serde     = { version = "1", features = ["derive"] }
clap      = { version = "4", features = ["derive", "env"] }
anyhow    = "1"
thiserror = "2"
regex     = "1"
ignore    = "0.4"
rayon     = "1"
rustc-hash             = "2"
tree-sitter            = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-rust       = "0.24"
tree-sitter-java       = "0.23"
tree-sitter-python     = "0.25"
tree-sitter-go         = "0.23"
tree-sitter-c-sharp    = "0.23"
tree-sitter-postgres   = "1.1"

toml       = "0.8"
serde_json = "1"
roxmltree  = "0.20"

serde_cbor = "0.11"
proptest   = { version = "1", default-features = false, features = ["std"] }
tempfile   = "3"
insta      = { version = "1", features = ["glob", "json"] }
axum       = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
rmcp       = { version = "1.7", default-features = false, features = ["server", "transport-streamable-http-server"] }
tokio      = { version = "1", features = ["rt-multi-thread", "net"] }
tokio-util = "0.7"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }

anstyle       = "1"
ratatui       = "0.30"
crossterm     = "0.29"
notify        = "8.2"

[profile.dev]
# No `panic = "abort"` here: on stable, `cargo test` requires panic=unwind, so
# setting abort forces a full recompile of the whole graph every time you switch
# between `cargo run`/`build`/`check` (abort) and `cargo test` (unwind).
debug         = false
debug-assertions = false
overflow-checks = false
incremental   = true
codegen-units = 256

[profile.dev.package."*"]
debug         = false

[profile.dev.build-override]
debug         = false
incremental   = true
codegen-units = 256

[profile.dev-debug]
inherits = "dev"
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true

[profile.release]
panic        = "unwind"
opt-level    = 3
lto          = "off"
codegen-units = 16

[profile.release-lto]
inherits      = "release"
lto           = "fat"
codegen-units = 1
