[package]
name          = "code-moniker"
version.workspace = true
edition       = "2024"
rust-version  = "1.86"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/ng-galien/code-moniker"
homepage      = "https://github.com/ng-galien/code-moniker"
documentation = "https://docs.rs/code-moniker"
readme        = "../../README.md"
description   = "Standalone CLI / linter for the code-moniker symbol graph: file and directory probes, project-wide architecture rules."
keywords      = ["code-search", "linter", "ast", "tree-sitter", "cli"]
categories    = ["command-line-utilities", "development-tools"]

[lib]
name = "code_moniker_cli"

[[bin]]
name = "code-moniker"
path = "src/main.rs"

[features]
default = ["pretty"]
pretty  = ["dep:anstyle"]
tui     = ["pretty", "dep:ratatui", "dep:ratatui-textarea", "dep:crossterm"]
mcp     = ["dep:axum", "dep:rmcp", "dep:tokio", "dep:tokio-util", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
code-moniker-core = { workspace = true, features = ["serde"] }
code-moniker-workspace = { workspace = true }
code-moniker-check = { workspace = true }
code-moniker-query = { workspace = true }
code-moniker-daemon = { workspace = true }
code-moniker-daemon-client = { workspace = true }

clap      = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
regex     = { workspace = true }
ignore    = { workspace = true }
rayon     = { workspace = true }
rustc-hash = { workspace = true }
toml      = { workspace = true }
axum       = { workspace = true, optional = true }
rmcp       = { workspace = true, optional = true }
tokio      = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tracing    = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

anstyle       = { workspace = true, optional = true }
ratatui       = { workspace = true, optional = true }
ratatui-textarea = { workspace = true, optional = true }
crossterm     = { workspace = true, optional = true }
tempfile      = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
proptest = { workspace = true }
