[package]
name          = "code-moniker-daemon-client"
version.workspace = true
edition       = "2024"
rust-version  = "1.86"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/ng-galien/code-moniker"
homepage      = "https://github.com/ng-galien/code-moniker"
description   = "Reusable client for the code-moniker workspace daemon."

[dependencies]
code-moniker-query = { workspace = true, features = ["rpc"] }

anyhow     = { workspace = true }
jsonrpsee  = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
