[package]
name          = "code-moniker-query"
version.workspace = true
edition       = "2024"
rust-version  = "1.86"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/ng-galien/code-moniker"
homepage      = "https://github.com/ng-galien/code-moniker"
description   = "Shared daemon query DSL and protocol DTOs for code-moniker."

[dependencies]
anyhow     = { workspace = true }
jsonrpsee  = { workspace = true, optional = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[features]
default = []
rpc = ["dep:jsonrpsee"]
