[package]
name          = "code-moniker-workspace"
version.workspace = true
edition       = "2024"
rust-version  = "1.86"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/ng-galien/code-moniker"
homepage      = "https://github.com/ng-galien/code-moniker"
description   = "Workspace model, ports, snapshots, linkage, and change analysis for code-moniker."

[features]
heap-profile = ["dep:dhat"]

[dependencies]
code-moniker-core = { workspace = true, features = ["serde"] }

anyhow     = { workspace = true }
thiserror  = { workspace = true }
ignore     = { workspace = true }
regex      = { workspace = true }
rustc-hash = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
rayon      = { workspace = true }
roaring    = { workspace = true }
dhat       = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
notify = { workspace = true, features = ["macos_fsevent"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "queries"
harness = false
