[package]
name = "order-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = "4"
common-model = { path = "../common-model" }
insta = "1"
proptest = "1"
ratatui = "0.29"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[lib]
name = "order_service"
path = "src/lib.rs"
